# Philips_Practice

./: .gitignore
BDD_Specflow/: 111ProjectStructure.csproj  111ProjectStructure.sln
BDD_Specflow/Features/: GetBoards.feature  GetBoards.feature.cs  GetBoardsValidation.feature  GetBoardsValidation.feature.cs  TwoNumbersAddition.feature  TwoNumbersAddition.feature.cs  UpdateBoard.feature  UpdateBoard.feature.cs
BDD_Specflow/Steps/: GetBoardValidationSteps.cs  GetBoardsSteps.cs  TwoNumbersAdditionSteps.cs  UpdateBoardSteps.cs
C#/AdvancedC#/: AdvancedC#.sln
C#/BuiltinGenerics/: BuiltinGenerics.sln
C#/Calc/: Calc.sln
C#/ConsoleApp1/: ConsoleApp1.sln
C#/ConsoleApp2/: ConsoleApp2.sln
C#/Contacts/: Contacts.sln
C#/DependencyInjection/: DependencyInjection.sln
C#/GenericChallenge/: GenericChallenge.sln
C#/Generic_prac/: Generic_prac.sln
zmq_docker/: docker-compose.yml
zmq_prac/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hwclient  hwserver
zmq_prac/Interrupt_Handling/: node.cpp
zmq_prac/Kill_Signaling/: sink.cpp  worker1.cpp
zmq_prac/Multithreading/: server.cpp  ventilator.cpp
zmq_prac/PAIR_Relay/: node.cpp
zmq_prac/PUB_SUB/: client.cpp
zmq_prac/PUB_SUB_Envelope/: client.cpp  server.cpp
zmq_prac/PUB_SUB_Proxy/: client.cpp  proxy.cpp
zmq_prac/PUB_SUB_Synced/: client1.cpp  server.cpp
zmq_prac/PUSH-PULL/: sink.cpp  ventilator.cpp  worker1.cpp  worker2.cpp
zmq_prac/REQ_REP/: client.cpp  server.cpp
zmq_prac/REQ_REP_Broker/: broker.cpp  client.cpp  server.cpp
zmq_prac/ZMQ_POLL/: poller.cpp  server.cpp
(+103 files in other folders)
